추천 수 기능 및 리뷰 목록 업데이트 기능